Correção de datas

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ We’re in private beta now, About Team, We work in dedicated project ​teams, 
               <div class="u-container-layout u-valign-bottom-sm u-valign-bottom-xs u-container-layout-1">
                 <h2 class="u-text u-text-custom-color-2 u-text-1">DATAS 2023</h2>
                 <p class="u-custom-font u-text u-text-2"> Horário: sempre às <br>19:00h&nbsp;<br>
-                  <br>21/março <br>27/abril <br>25/maio <br>22/junho <br>24/agosto <br>21/setembro <br>26/outubro <br>23/novembro 
+                  <br>21/março <br> <br> <br> <br> <br> <br> <br> 
                 </p>
-                <h2 class="u-text u-text-custom-color-2 u-text-3">vALOR</h2>
+                <h2 class="u-text u-text-custom-color-2 u-text-3">VALOR</h2>
                 <p class="u-custom-font u-text u-text-4"> R$80,00 pix ou cartão <br>de crédito.<br>&nbsp;<br>Para garantir atenção e <br>acolhimento integral, as <br>vagas são limitadas! Não <br>deixe para última hora e <br>faça sua reserva!&nbsp;<br>
                   <br>Contatos: <br>Cláudia <a href="https://api.whatsapp.com/send?phone=5548992104522&amp;text=Quero%20reservar%20o%20C%C3%ADrculo%20de%20Mulheres%202023." class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-3 u-btn-1" target="_blank">(48) 99210-4522</a>
                   <br>Tatiana <a href="https://api.whatsapp.com/send?phone=5548984078674&amp;text=Quero%20reservar%20o%20C%C3%ADrculo%20de%20Mulheres%202023." class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-3 u-btn-2" target="_blank">(48) 98407-8674</a>
